# vard

./: .gitignore  .mcp.json.example  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_LOG.md  pyproject.toml
docs/: README.md
eval/: FINDINGS.md  README.md  __init__.py  agent_eval.py  agent_tools.py  budget_match.py  candidates.py  candidates_cb.py  candidates_score.py  cb_cand_score.py  cb_head_to_head.py  ceiling_analysis.py  channels.py  contextbench.py  coupling_compare.py  dataflow.py  dataset.py  edges2.py  funccoupling.py  head_to_head.py  identify.py  memory_db.py  metric.py  recall_union.py  retrievers.py  run.py  run_cb.py  seed_sweep.py  state_lineage.py  token_budget.py  valueflow.py  vard_vs_agent.py  vtool.sh
eval/agent_runs/: eladmin-cache-login_armA.json  eladmin-cache-login_armB.json  eladmin-cache-login_gold.json  kcloud-cache-result_armA.json  kcloud-cache-result_armB.json  kcloud-cache-result_gold.json
eval/bugs/: _TEMPLATE.json  eladmin-cache-login.json  eladmin-findinset-query.json  eladmin-node-move-cycle.json  eladmin-npe-guard.json  eladmin-userlog-query.json  kcloud-cache-result.json  smk8s-tracing.json  stratospheric-webjars.json  szboot-jackson-null.json  thrivex-oss-dynamic.json  (+9 more)
tests/: test_core.py
vard/: __init__.py  candidates.py  cli.py  common.py  config_index.py  deps.py  discover.py  embed.py  freshness.py  graph.py  history.py  hook.py  mcp_server.py  memory.py  propagate.py  query.py  rank.py  resources.py  runtime.py  selflabel.py  state.py
vard-agent/: build.sh  manifest.txt  pom.xml  sampler-VardSampler.java.txt
(+6 files in other folders)
